--- a/AntarcticPress/AntarcticPress.html
+++ b/AntarcticPress/AntarcticPress.html
@@ -39,25 +39,96 @@ Many now-established creators started their careers at Antarctic (with most cont
 </p><p>
 Titles
 </p><p>
+<li><a href="AntarcticPress11.jpg">8-Bit Zombit</a> (2013)
+<li><a href="AntarcticPress10.jpg">32-Bit Zombit</a> (2014)
 <li><a href="AntarcticPress2.jpg">A History of Webcomics</a> (2006)
+<li><a href="AntarcticPress12.jpg">A-OK</a> (1992)
+<li><a href="AntarcticPress13.jpg">Absolute Zero</a> (1995)
+<li><a href="AntarcticPress14.jpg">Action Time Buddies</a> (2013)
+<li><a href="AntarcticPress15.jpg">Addam Omega</a> (1997)
+<li><a href="AntarcticPress16.jpg">Adventure Finders</a> (2017)
+<li><a href="AntarcticPress17.jpg">Adventures Of A Comic Con Girl</a> (2012)
+<li><a href="AntarcticPress18.jpg">Agents</a> (2004)
+<li><a href="AntarcticPress16.jpg">Adventure Finders</a> (2017)
+<li><a href="AntarcticPress19.jpg">Airboy: Deadeye</a> (2012)
+<li><a href="AntarcticPress20.jpg">Airship Enterprise</a> (2017)
+<li><a href="AntarcticPress21.jpg">Alamo: The Comic Book</a> (2004)
 <li><a href="AntarcticPress3.jpg">Albedo</a> (1991)
+<li><a href="AntarcticPress22.jpg">Alexander Hamilton</a> (2017)
+<li><a href="AntarcticPress23.jpg">Alley Oop Adventures</a> (1998)
+<li><a href="AntarcticPress24.jpg">Amazing Adventures Of Professor Jones</a> (1996)
+<li><a href="AntarcticPress25.jpg">Amazing Strip</a> (1994)
 <li><a href="AntarcticPress4.jpg">American Woman</a> (1998)
+<li><a href="AntarcticPress26.jpg">Antarctic Press Jam</a> (1996)
+<li><a href="AntarcticPress27.jpg">Antares Circle</a> (1990)
+<li><a href="AntarcticPress28.jpg">AP Chillers</a> (2003)
 <li><a href="AntarcticPress5.jpg">AP's How to Draw Manga</a> (1995)
+<li><a href="AntarcticPress29.jpg">Areala: Angel Of War</a> (1998)
+<li><a href="AntarcticPress30.jpg">Arya</a> (2017)
+<li><a href="AntarcticPress31.jpg">Asrial / Cheetah: Dragonblade</a> (2001)
+<li><a href="AntarcticPress32.jpg">Asrial vs. Chetah</a> (1996)
+<li><a href="AntarcticPress33.jpg">Assembly</a> (2003)
+<li><a href="AntarcticPress34.jpg">Athena</a> (1996)
+<li><a href="AntarcticPress35.jpg">Aztec Anthropomorphic Amazons</a> (1994)
 <li><a href="AntarcticPress6.jpg">Bad Kids Go to Hell</a> (2009)
+<li><a href="AntarcticPress36.jpg">Barack Panther</a> (2018)
 <li><a href="AntarcticPress7.jpg">Barr Girls</a> (1996) 
 <li><a href="AntarcticPress8.jpg">Battle Binder Plus (1995) 
 <li><a href="AntarcticPress9.jpg">Battle Girlz</a> (2002)
-<li>Bondage Fairies (1994) 
-<li>Box Office Poison (1996)
-<li>Cheeta Pop Scream Queen (1994) 
-<li>Chesty Sanchez (1995)
-<li>Courageous Princess (2000)
-<li>Deviant (1999) 
-<li>Diesel (1997)
-<li>Dinowars (2006)
-<li>Dragon Arms (2002)
-<li>Emblem (1994) 
-<li>Extremely Silly Comics (1986)
+<li><a href="AntarcticPress37.jpg">Benzine</a> (2000)
+<li><a href="AntarcticPress38.jpg">Beowulf</a> (2006)
+<li><a href="AntarcticPress39.jpg">Best Of Furrlough</a> (1995)
+<li><a href="AntarcticPress40.jpg">Best Of Gold Digger Annual</a> (1999)
+<li><a href="AntarcticPress41.jpg">Betti Cozmo</a> (1999)
+<li><a href="AntarcticPress42.jpg">Big Game</a> (1999)
+<li><a href="AntarcticPress43.jpg">Bit Torment</a> (1999)
+<li><a href="AntarcticPress44.jpg">Black Hops: U.S.A. G.I.</a> (1999)
+<li><a href="AntarcticPress45.jpg">Blade Bunny</a> (2016)
+<li><a href="AntarcticPress46.jpg">Blue Grind</a> (2006)
+<li><a href="AntarcticPress47.jpg">Box Office Poison</a> (1996)
+<li><a href="AntarcticPress48.jpg">Broxen Axis</a> (1996)
+<li><a href="AntarcticPress49.jpg">Buffalo Wings</a> (1993)
+<li><a href="AntarcticPress50.jpg">Cadmus</a> (2017)
+<li><a href="AntarcticPress51.jpg">Cell</a> (1996)
+<li><a href="AntarcticPress52.jpg">Change Commander Goku</a> (1993)
+<li><a href="AntarcticPress53.jpg">Cheeta Pop Scream Queen</a> (1994) 
+<li><a href="AntarcticPress54.jpg">Chesty Sanchez</a> (1995)
+<li><a href="AntarcticPress55.jpg">Chip</a> (2010)
+<li><a href="AntarcticPress56.jpg">Chip: Second Crack</a> (2010)
+<li><a href="AntarcticPress57.jpg">Chisuji</a> (2005)
+<li><a href="AntarcticPress58.jpg">Chronicles Of The Universe</a> (2001)
+<li><a href="AntarcticPress59.jpg">Code Name: Scorpio</a> (1996)
+<li><a href="AntarcticPress60.jpg">Cookie And The Kid</a> (2018)
+<li><a href="AntarcticPress61.jpg">Counter Ops</a> (1994)
+<li><a href="AntarcticPress62.jpg">Courageous Princess</a> (2000)
+<li><a href="AntarcticPress63.jpg">Crawling Sky</a> (2013)
+<li><a href="AntarcticPress64.jpg">Creature</a> (1997)
+<li><a href="AntarcticPress65.jpg">Crimson Nun</a> (1997)
+<li><a href="AntarcticPress66.jpg">Crossfire</a> (1997)
+<li><a href="AntarcticPress67.jpg">Cybersexation</a> (1997)
+<li><a href="AntarcticPress68.jpg">Dark Shrine</a> (1997)
+<li><a href="AntarcticPress69.jpg">Dark Tales Of Daily Horror</a> (1997)
+<li><a href="AntarcticPress70.jpg">Deadforce</a> (1997)
+<li><a href="AntarcticPress71.jpg">Demon Cleaner</a> (2009)
+<li><a href="AntarcticPress72.jpg">Deviant</a> (1999) 
+<li><a href="AntarcticPress73.jpg">Devils</a> (2018)
+<li><a href="AntarcticPress74.jpg">Dictators Of The 20th Century: Hitler</a> (2004)
+<li><a href="AntarcticPress75.jpg">Dictators Of The 20th Century: Saddam Hussein</a> (2004)
+<li><a href="AntarcticPress76.jpg">Diesel</a> (1997)
+<li><a href="AntarcticPress77.jpg">Dinowars</a> (2006)
+<li><a href="AntarcticPress78.jpg">Dodekain</a> (1994)
+<li><a href="AntarcticPress79.jpg">Dog Eaters</a> (2019)
+<li><a href="AntarcticPress80.jpg">Dojinshi</a> (1992)
+<li><a href="AntarcticPress81.jpg">Dr. Frankensteam's Monster</a> (2014)
+<li><a href="AntarcticPress82.jpg">Dragon Arms</a> (1994)
+<li><a href="AntarcticPress83.jpg">Dragon Flux</a> (1996)
+<li><a href="AntarcticPress84.jpg">Dragonpro</a> (2006)
+<li><a href="AntarcticPress85.jpg">Duel</a> (2005)
+<li><a href="AntarcticPress86.jpg">Enter The Zombie</a> (2010)
+<li><a href="AntarcticPress87.jpg">Exciting Comics</a> (2019)
+<li><a href="AntarcticPress88.jpg">Exciting Comics Extravaganza</a> (2019)
+<li><a href="AntarcticPress89.jpg">F-3 Bandit</a> (1995)
+
 <li>Families of Altered Wars (2002)
 <li>Fantastic Panic (1993)
 <li>Far West (1998)
