--- a/AntarcticPress/AntarcticPress.html
+++ b/AntarcticPress/AntarcticPress.html
@@ -128,9 +128,10 @@ Titles
 <li><a href="AntarcticPress87.jpg">Exciting Comics</a> (2019)
 <li><a href="AntarcticPress88.jpg">Exciting Comics Extravaganza</a> (2019)
 <li><a href="AntarcticPress89.jpg">F-3 Bandit</a> (1995)
-
-<li>Families of Altered Wars (2002)
-<li>Fantastic Panic (1993)
+<li><a href="AntarcticPress90.jpg">F.P. Steamcraft</a> (2016)
+<li><a href="AntarcticPress91.jpg">Fail Of The Dead</a> (2011)
+<li><a href="AntarcticPress92.jpg">Families Of Altered Wars</a> (2002)
+<li><a href="AntarcticPress93.jpg">Fantastic Panic</a> (1993)
 <li>Far West (1998)
 <li>Final Girl (2007)
 <li>Furrlough (1991)
