--- a/SpainRodriguez/SpainRodriguez.html
+++ b/SpainRodriguez/SpainRodriguez.html
@@ -30,6 +30,15 @@
 <div class="mySlides" style="text-align: center;"><img src="Spain10.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Spain11.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Spain12.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Spain13.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Spain14.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Spain15.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Spain16.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Spain17.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Spain18.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Spain19.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Spain20.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Spain21.jpg"></div>
 
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
@@ -44,18 +53,16 @@ Titles
 </p><p>
 <li><a href="Spain2.jpg">Subvert Comics</a> (1970)
 <li><a href="Spain3.jpg">Mean Bitch Thrills</a> (1971)
-<li>Food Price Blackmail: Who's Behind the High Cost of Eating (1973)
+<li><a href="Spain13.jpg">Food Price Blackmail: Who's Behind the High Cost of Eating</a> (1973)
 <li><a href="Spain1.jpg">Trashman Lives!</a> (1989)
 <li><a href="Spain4.jpg">She: Anthology of Big Bitch</a> (1993)
 <li><a href="Spain5.jpg">My True Story</a> (1994)
 <li><a href="Spain6.jpg">Cruzing With The Hound</a> (2012)
-<li>Nothing in This Book Is True, But It's Exactly How Things Are (1994)
-<li>Alien Apocalypse 2006 (2000)
-<li>Sherlock Holmes' Strangest Cases (2001)
-<li>Nightmare Alley (2003)
-<li>You Are a Spiritual Being Having a Human Experience (2003)
-<li>Che: A Graphic Biography (2008)
-<li>Devil Dog: the Amazing True Story of the Man Who Saved America (2010)
+<li><a href="Spain18.jpg">Alien Apocalypse 2006</a> (2000)
+<li><a href="Spain14.jpg">Nightmare Alley</a> (2003)
+<li><a href="Spain17.jpg">Che: A Graphic Biography (2008)
+<li><a href="Spain20.jpg">Devil Dog: the Amazing True Story of the Man Who Saved America (2010)
+<li><a href="Spain19.jpg">Zodiac Mindwarp</a> (1968)
 </p>
 
 </body>
