--- a/AlphaFlight/AlphaFlight.html
+++ b/AlphaFlight/AlphaFlight.html
@@ -8,9 +8,7 @@
 </head>
 
 <body>
-<img src="AlphaFlight1.jpg" title="AlphaFlight #1 1983"> <br>
-Series: 130 issues (1983 - 1994), 20 issues (1997 - 1999), 12 issues (2004 - 2005), 9 issues (2011 - 2012) by Marvel<br>
-Illustrator: John Byrne, Terry Austin. Writer: John Byrne<br>
+<img src="AlphaFlight1.jpg" title="AlphaFlight #1 1983">
 <p>
 <div class="row"><div class="column">
 <img src="../SlideshowButton.jpg" style="width:100%" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
@@ -75,7 +73,15 @@ Illustrator: John Byrne, Terry Austin. Writer: John Byrne<br>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
 </div></div>
 </p><p>
+130 issues (1983 - 1994), 20 issues (1997 - 1999), 12 issues (2004 - 2005), 9 issues (2011 - 2012) by Marvel, originally written and illustrated by John Byrne and Terry Austin.
+</p><p>
 Alpha Flight is a team of Canadian super heroes. The characters premiered in the April 1979 issue of X-Men. Marvel published an Alpha Flight comic book series from 1983 to 1994.
+</p><p>
+Most team members have distinctly Canadian attributes, such as having Inuit/First Nations or French heritage. Throughout most of its history, the team has worked for Department H, a fictional branch of Canada's Department of National Defence that deals with super-powered villains. 
+</p><p>
+The purpose of Department H to find and develop Canada's superheroes. New recruit Groundhog joins Snowbird, St. Elmo, Stitch, Wolverine (as Weapon X), and Smart Alec in training. Within a week, the Flight is pressed into their first battle with Egghead's incarnation of the Emissaries of Evil (consisting of Rhino, Solarr, Eel, Porcupine, Power Man and Swordsman). 
+</p><p>
+Egghead threatens the United States from Canadian soil with a nuclear missile. Smart Alec disables the missile's guidance system, but Egghead triggers the detonation sequence. Smart Alec panics leading to St. Elmo transforming the missile and the bomb into light. St. Elmo succeeds, but loses himself in the process. Groundhog and Dr. Michael Twoyoungmen scold Hudson for sending the team into battle while so inexperienced, with a near psychotic leader (Weapon X) and someone who folds under pressure. Hudson thus makes plans for a tiered team system, leading to the formation of Alpha, Beta and Gamma Flight.
 </p>
 Issue collections:<ul> 
 <li>Alpha Flight Classic vol1 Collects Alpha Flight #1-8</li>
