--- a/AntarcticPress/AntarcticPress.html
+++ b/AntarcticPress/AntarcticPress.html
@@ -130,8 +130,8 @@ Many now-established creators started their careers at Antarctic (with most cont
 </p><p>
 Titles
 </p><p>
-<li><a href="AntarcticPress11.jpg">8-Bit Zombit</a> (2013)
-<li><a href="AntarcticPress10.jpg">32-Bit Zombit</a> (2014)
+<li><a href="AntarcticPress11.jpg">8-Bit Zombie</a> (2013)
+<li><a href="AntarcticPress10.jpg">32-Bit Zombie</a> (2014)
 <li><a href="AntarcticPress2.jpg">A History of Webcomics</a> (2006)
 <li><a href="AntarcticPress12.jpg">A-OK</a> (1992)
 <li><a href="AntarcticPress13.jpg">Absolute Zero</a> (1995)
@@ -218,8 +218,8 @@ Titles
 <li><a href="AntarcticPress86.jpg">Enter The Zombie</a> (2010)
 <li><a href="AntarcticPress87.jpg">Exciting Comics</a> (2019)
 <li><a href="AntarcticPress88.jpg">Exciting Comics Extravaganza</a> (2019)
-<li><a href="AntarcticPress89.jpg">F-3 Bandit</a> (1995)
 <li><a href="AntarcticPress90.jpg">F.P. Steamcraft</a> (2016)
+<li><a href="AntarcticPress89.jpg">F-3 Bandit</a> (1995)
 <li><a href="AntarcticPress91.jpg">Fail Of The Dead</a> (2011)
 <li><a href="AntarcticPress92.jpg">Families Of Altered Wars</a> (2002)
 <li><a href="AntarcticPress93.jpg">Fantastic Panic</a> (1993)
