--- a/FirstComics/FirstComics.html
+++ b/FirstComics/FirstComics.html
@@ -19,6 +19,67 @@
 <div class="modal-content">
 
 <div class="mySlides" style="text-align: center;"><img src="FirstComics1.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="FirstComics2.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="FirstComics3.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="FirstComics4.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="FirstComics5.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="FirstComics6.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="FirstComics7.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="FirstComics8.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="FirstComics9.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="FirstComics10.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="FirstComics11.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="FirstComics12.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="FirstComics13.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="FirstComics14.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="FirstComics15.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="FirstComics16.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="FirstComics17.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="FirstComics18.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="FirstComics19.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="FirstComics20.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="FirstComics21.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="FirstComics22.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="FirstComics23.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="FirstComics24.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="FirstComics25.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="FirstComics26.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="FirstComics27.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="FirstComics28.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="FirstComics29.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="FirstComics30.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="FirstComics31.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="FirstComics32.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="FirstComics33.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="FirstComics34.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="FirstComics35.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="FirstComics36.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="FirstComics37.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="FirstComics38.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="FirstComics39.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="FirstComics40.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="FirstComics41.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="FirstComics42.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="FirstComics43.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="FirstComics44.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="FirstComics45.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="FirstComics46.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="FirstComics47.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="FirstComics48.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="FirstComics49.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="FirstComics50.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="FirstComics51.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="FirstComics52.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="FirstComics53.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="FirstComics54.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="FirstComics55.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="FirstComics56.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="FirstComics57.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="FirstComics58.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="FirstComics59.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="FirstComics60.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="FirstComics61.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="FirstComics62.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
@@ -26,69 +87,78 @@
 </p><p>
 First Comics was an American comic-book publisher that was active from 1983 to 1991, known for titles like American Flagg!, Grimjack, Nexus, Badger, Dreadstar, and Jon Sable. Along with competitors like Pacific Comics and Eclipse Comics, First took early advantage of the growing direct market, attracting a number of writers and artists from DC and Marvel to produce creator-owned titles, which, as they were not subject to the Comics Code, were free to feature more mature content.
 </p><p>
-Based in Evanston, Illinois, First Comics was co-founded by Ken F. Levin[5] and Mike Gold. It launched in 1983 with a line-up of creators including Frank Brunner, Mike Grell, Howard Chaykin, Joe Staton, Steven Grant, Timothy Truman, and Jim Starlin. In 1984, First acquired all the titles of the short-lived publisher Capital Comics, including Mike Baron's action/superhero/fantasy/comedy series Badger, and Baron and Steve Rude's space-superhero series Nexus.
+Based in Evanston, Illinois, First Comics was co-founded by Ken F. Levin and Mike Gold. It launched in 1983 with a line-up of creators including Frank Brunner, Mike Grell, Howard Chaykin, Joe Staton, Steven Grant, Timothy Truman, and Jim Starlin. In 1984, First acquired all the titles of the short-lived publisher Capital Comics, including Mike Baron's action/superhero/fantasy/comedy series Badger, and Baron and Steve Rude's space-superhero series Nexus.
 </p><p>
 Among First's best-known titles were Chaykin's satirical futuristic cop series American Flagg; John Ostrander and Tim Truman's Grimjack; Baron &amp; Rude's Nexus; Badger; Jim Starlin's space opera series Dreadstar and Mike Grell's Jon Sable, which was briefly adapted for TV.
 </p><p>
 Titles
 </p><p>
-<li>Alter Ego (4 issues)
-<li><a href="../AmericanFlagg/AmericanFlagg.html">American Flagg!</a> (50 issues, plus special, then 12 issue series)
+<li><a href="FirstComics2.jpg">Alter Ego</a> (1986)
+<li><a href="../AmericanFlagg/AmericanFlagg.html">American Flagg!</a> (1983)
 <li><a href="../Badger/Badger.html">Badger</a> (1985)
-<li>Corum (Michael Moorcock adaptation):
-<li>The Chronicles of Corum (12 issues, 1987-1988)
-<li>The Bull and the Spear (4 issues, 1989)
-<li>Classics Illustrated (27 issues)
-<li>Crossroads (5 issues)
-<li>Dreadstar (from Epic Comics, 38 issues)
-<li>Dynamo Joe (15 issues, plus 1 special)
-<li>Elric (Michael Moorcock adaptation):
-<li>Sailor on the Seas of Fate (7 issues, 1985-1986)
-<li>Elric of Melnibone (1 issue, 1986)
-<li>Weird of the White Wolf (5 issues, 1986-1987)
-<li>The Vanishing Tower (6 issues, 1987-1988)
-<li>The Bane of the Black Sword (6 issues, 1988)
-<li>E-Man (from Charlton Comics, 25 issues then goes to Comico)
-<li>The Enchanted Apples of Oz
-<li>Evangeline (from Comico, 12 issues)
-<li>First Adventures (5 issues, anthology series featuring Whisper, Blaze Barlow, and Dynamo Joe)
-<li>First Graphic Novel, anthology series featuring Nexus, Oz, Teenage Mutant Ninja Turtles, and others
-<li>The Gift (one-shot)
-<li><a href="../Grimjack/Grimjack.html">Grimjack</a> (81 issues, plus a limited series and a graphic novel)
-<li>Hammer of God: Sword of Justice (2 issue mini-series, tie-in with Nexus)
-<li>Hawkmoon (Michael Moorcock adaptation):
-<li>The Jewel in the Skull (4 issue mini-series, 1986)
-<li>The Mad God's Amulet (4 issue mini-series, 1987)
-<li>The Sword of Dawn (4 issue mini-series, 1987)
-<li>The Runestaff (4 issue mini-series, 1988)
-<li>Inspector Oh (regular series, 2016)
-<li>Jon Sable, Freelance (56 issues)
-<li>Mike Grell's Jon Sable (10 issues)
-<li>Lone Wolf and Cub (45 issues)
-<li>Love Town (regular series, 2018)
-<li>Mars (12 issues)
-<li>Mazinger (graphic novel)
-<li>Meta-4 (3 issues)
-<li>Munden's Bar (2 specials)
-<li>Nexus (80 issues, plus several limited series)
-<li>Original E-Man &amp; Michael Mauser (7 issues)
-<li>The P.I.s (3 issues)
-<li>Psychoblast (9 issues)
-<li>Sable (27 issues)
-<li>Sensei (4 issues)
-<li>Serving Supes (ongoing)
+<li><a href="FirstComics3.jpg">Beauty And The Beast: Night Of Beauty</a> (1990)
+<li><a href="FirstComics4.jpg">Beowulf</a> (1984)
+<li><a href="FirstComics5.jpg">Betty Boop's Big Break</a> (1990)
+<li><a href="FirstComics6.jpg">Chronicles of Corum</a> (1987)
+<li><a href="FirstComics7.jpg">Classics Illustrated</a> (1990)
+<li><a href="FirstComics8.jpg">Corum: The Bull And The Spear</a> (1989)
+<li><a href="FirstComics9.jpg">Crossroads</a> (1988)
+<li><a href="FirstComics10.jpg">Demon Knight: A Grimjack Graphic Novel</a> (1989)
+<li><a href="FirstComics11.jpg">Dreadstar</a> (1986)
+<li><a href="FirstComics12.jpg">Dynamo Joe</a> (1986)
+<li><a href="FirstComics13.jpg">E-Man</a> (1983)
+<li><a href="FirstComics14.jpg">Elric of Melnibone</a> (1986)
+<li><a href="FirstComics15.jpg">Elric: Sailor on the Seas of Fate</a> (1985)
+<li><a href="FirstComics16.jpg">Elric: The Bane Of The Black Sword</a> (1988)
+<li><a href="FirstComics17.jpg">Elric: The Vanishing Tower</a> (1987)
+<li><a href="FirstComics18.jpg">Elric: The Weird of the White Wolf</a> (1986)
+<li><a href="FirstComics19.jpg">Enchanted Apples of Oz</a> (1986)
+<li><a href="FirstComics20.jpg">Evangeline</a> (1987)
+<li><a href="FirstComics21.jpg">First Adventures</a> (1985)
+<li><a href="FirstComics22.jpg">First Six Pack</a> (1987)
+<li><a href="FirstComics23.jpg">Forgotten Forest Of Oz</a> (1988)
+<li><a href="FirstComics24.jpg">Ghostbusters</a> (1987)
+<li><a href="FirstComics25.jpg">Gift: A First Holiday Special</a> (1990)
+<li><a href="../Grimjack/Grimjack.html">Grimjack</a> (1984)
+<li><a href="FirstComics26.jpg">Grimjack Casefiles</a> (1990)
+<li><a href="FirstComics27.jpg">Hammer Of God</a> (1990)
+<li><a href="FirstComics28.jpg">Hammer Of God: Sword of Justice</a> (1991)
+<li><a href="FirstComics29.jpg">Hawkmoon: The Jewel in the Skull</a> (1986)
+<li><a href="FirstComics30.jpg">Hawkmoon: The Mad God's Amulet</a> (1987)
+<li><a href="FirstComics31.jpg">Hawkmoon: The Runestaff</a> (1988)
+<li><a href="FirstComics32.jpg">Hawkmoon: The Sword of Dawn</a> (1987)
+<li><a href="FirstComics33.jpg">Hexbreaker: A Badger Graphic Novel</a> (1988)
+<li><a href="FirstComics34.jpg">Ice King Of Oz</a> (1987)
+<li><a href="FirstComics35.jpg">Jon Sable, Freelance</a> (1983)
+<li><a href="FirstComics36.jpg">Lone Wolf and Cub</a> (1987)
+<li><a href="FirstComics37.jpg">Mars</a> (1984)
+<li><a href="FirstComics38.jpg">Mazinger</a> (1988)
+<li><a href="FirstComics39.jpg">Meta-4</a> (1991)
+<li><a href="FirstComics40.jpg">Mike Grell's Sable</a> (1990)
+<li><a href="FirstComics41.jpg">Munden's Bar Annual</a> (1988)
+<li><a href="FirstComics42.jpg">Next Nexus</a> (1989)
+<li><a href="FirstComics43.jpg">Nexus</a> (1985)
+<li><a href="FirstComics44.jpg">Nexus Legends</a> (1989)
+<li><a href="FirstComics45.jpg">Original E-Man &amp; Michael Mauser</a> (1985)
+<li><a href="FirstComics46.jpg">P.I.s: Michael Mauser and Ms. Tree</a> (1985)
+<li><a href="FirstComics47.jpg">Psychoblast</a> (1987)
+<li><a href="FirstComics48.jpg">Sable</a> (1988)
+<li><a href="FirstComics49.jpg">Secret Island Of Oz</a> (1986)
+<li><a href="FirstComics50.jpg">Sensei</a> (1989)
 <li><a href="../Shatter/Shatter.html">Shatter</a> (1985)
+<li><a href="FirstComics51.jpg">Squalor</a> (1989)
 <li><a href="../Starslayer/Starslayer.html">Starslayer</a> (1983)
-<li>Squalor (4 issues)
-<li>Team Yankee (6 issues, followed by graphic novel)
-<li>Time Beavers (graphic novel)
-<li>Time² (two graphic novels)
-<li>Twilight Man (4 issues)
-<li>Warp (19 issues, plus 3 specials)
-<li>Whisper (37 issues, plus a special)
-<li>Zen: Hard Bounty (6 issues)
-<li>Zen: Home (one-shot)
-<li>Zero Tolerance (4 issues)
+<li><a href="FirstComics52.jpg">Team Yankee</a> (1989)
+<li><a href="FirstComics53.jpg">Teenage Mutant Ninja Turtles</a> (1986)
+<li><a href="FirstComics54.jpg">Time Beavers</a> (1985)
+<li><a href="FirstComics55.jpg">Time: The Epiphany</a> (1986)
+<li><a href="FirstComics56.jpg">Time: The Satisfaction Of Black Mariah</a> (1987)
+<li><a href="FirstComics57.jpg">Twilight Man</a> (1989)
+<li><a href="FirstComics58.jpg">Warp</a> (1983)
+<li><a href="FirstComics59.jpg">Warp Special</a> (1983)
+<li><a href="FirstComics60.jpg">Whisper</a> (1986)
+<li><a href="FirstComics61.jpg">Whisper Special</a> (1985)
+<li><a href="FirstComics62.jpg">Zero Tolerance</a> (1990)
 </p>
 
 </body>
