--- a/Image/image.html
+++ b/Image/image.html
@@ -236,9 +236,9 @@ Titles thought not to fit with the Image brand were self-published under Liefeld
 </p><p>
 Titles
 </p><p>
-<li><a href="image1.jpg">10th Muse</a> (2000–2001)
-<li><a href="image2.jpg">13 Chambers</a> (2008; by mink and Denis Medri)
-<li><a href="image3.jpg">13th Artifact</a> (2016; by Amit Chauhan)
+<li><a href="image1.jpg">10th Muse</a> (2000)
+<li><a href="image2.jpg">13 Chambers</a> (2008)
+<li><a href="image3.jpg">13th Artifact</a> (2016)
 <li><a href="image4.jpg">1963</a> (1993)
 <li><a href="image21.jpg">20xx</a> (2019)
 <li><a href="image5.jpg">21</a> (1996)
@@ -251,11 +251,11 @@ Titles
 <li><a href="image11.jpg">76</a> (2008)
 <li><a href="image12.jpg">86 Voltz: the Dead Girl</a> (2005)
 <li><a href="image13.jpg">8house</a> (2016)
+<li><a href="../ADistantSoil/ADistantSoil.html"> A Distant Soil</a> (1996)
 <li><a href="image14.jpg">A.D.: After Death</a> (2017)
 <li><a href="image19.jpg">Aaron Strips</a> (1997)
 <li><a href="image20.jpg">Accelerate</a> (2007)
 <li><a href="image15.jpg">Activity</a> (2011)
-<li><a href="../ADistantSoil/ADistantSoil.html"> A Distant Soil</a> ()
 <li><a href="image16.jpg">Adrenalynn: Weapon of War</a> (1999)
 <li><a href="image17.jpg">Adventures into Mindless Self Indulgence</a> (2010)
 <li><a href="image18.jpg">Adventures of Aaron</a> (1997)
@@ -416,7 +416,7 @@ Titles
 <li><a href="image168.jpg">Brit</a> (2003)
 <li><a href="image167.jpg">Broken Trinity</a> (2008)
 <li><a href="image170.jpg">Bug Boy</a> (1998)
-<li><a href="../BulletproofCoffin/BulletproofCoffin.html">Bulletproof Coffin</a>
+<li><a href="../BulletproofCoffin/BulletproofCoffin.html">Bulletproof Coffin</a> (2010)
 <li><a href="image164.jpg">Bulletproof Monk</a> (1998)
 <li><a href="image165.jpg">Burglar Bill</a> (2004)
 <li><a href="image166.jpg">Butcher Knight</a> (2000)
