--- a/DarkHorse/DarkHorse.html
+++ b/DarkHorse/DarkHorse.html
@@ -466,6 +466,7 @@ That same year, Frank Miller (Batman: The Dark Knight Returns) and Dave Gibbons 
 <li><a href="Darkhorse197.jpg">Michael Chabon Presents The Amazing Adventures of The Escapist</a> (1994)
 <li><a href="../MilkmanMurders/MilkmanMurders.html">Milkman Murders</a> (2004)
 <li><a href="../MindMgmt/MindMgmt.html">MIND MGMT</a> (2015)
+<li><a href="Darkhorse346.jpg">Monkey King</a> (2005)
 <li><a href="Darkhorse198.jpg">Monkeyman &amp;O'Brien</a> (1996)
 <li><a href="../Moth/Moth.html">Moth</a> (2004)
 <li><a href="../Motorhead/Motorhead.html">Motorhead</a> (1996)
