--- a/NowComics/NowComics.html
+++ b/NowComics/NowComics.html
@@ -39,6 +39,9 @@
 <div class="mySlides" style="text-align: center;"><img src="Now18.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Now19.jpg"></div>
 <div class="mySlides" style="text-align: center;"><img src="Now20.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Now21.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Now22.jpg"></div>
+<div class="mySlides" style="text-align: center;"><img src="Now23.jpg"></div>
 
 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
 <a class="next" onclick="plusSlides(1)">&#10095;</a>
@@ -50,11 +53,12 @@ The company was headquartered in the Chicago Loop in Chicago, Illinois. Most NOW
 </p><p>
 Titles
 </p><p>
-<li><a href="../AliasNow/AliasNow.html">Alias:</a>
+<li><a href="Now21.jpg">Adventures Of Baron Munchausen</a> (1989)
+<li><a href="../AliasNow/AliasNow.html">Alias:</a> (1990)
 <li><a href="Now1.jpg">Eb'nn</a> (1986)
 <li><a href="Now2.jpg">Freejack</a> (1992)
-<li><a href="Now3.jpg">Fright Night</a>
-<li><a href="Now4.jpg">Ghostbusters II</a>
+<li><a href="Now3.jpg">Fright Night</a> (1988)
+<li><a href="Now4.jpg">Ghostbusters II</a> (1989)
 <li><a href="Now5.jpg">Green Hornet</a> (1989)
 <li><a href="Now6.jpg">Married... with Children</a> (1990)
 <li><a href="Now7.jpg">MirrorWalker</a> (1990)
@@ -66,11 +70,14 @@ Titles
 <li><a href="Now13.jpg">Rust</a> (1987)
 <li><a href="Now14.jpg">Slimer!</a> (1989)
 <li><a href="Now15.jpg">Speed Racer</a> (1985)
+<li><a href="Now23.jpg">Syphons</a> (1986)
 <li><a href="Now16.jpg">Terminator</a> (1988)
 <li><a href="Now17.jpg">Terminator: The Burning Earth</a> (1990)
 <li><a href="Now18.jpg">Twilight Zone</a> (1990)
 <li><a href="Now19.jpg">Universal Soldier</a> (1992)
+<li><a href="Now22.jpg">Valor Thunderstar And His Fireflies</a> (1986)
 <li><a href="Now20.jpg">Vector</a> (1986)
+
 </p>
 
 </body>
