--- a/index.html
+++ b/index.html
@@ -13610,6 +13610,13 @@
 </tr>
 
 <tr>
+<td>Eb'nn</td>
+<td>1986</td>
+<td>Now</td>
+<td><a href="NowComics/NowComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Eddas</td>
 <td>1220</td>
 <td>Antiquity</td>
@@ -15842,6 +15849,13 @@
 </tr>
 
 <tr>
+<td>Freejack</td>
+<td>1992</td>
+<td>Now</td>
+<td><a href="NowComics/NowComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Freeway</td>
 <td>2011</td>
 <td>Fantagraphics</td>
@@ -15874,6 +15888,13 @@
 <td>1975</td>
 <td>Atlas Seaboard</td>
 <td><a href="Fright/Fright.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Fright Night</td>
+<td>1988</td>
+<td>Now</td>
+<td><a href="NowComics/NowComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -16752,6 +16773,13 @@
 </tr>
 
 <tr>
+<td>Ghost Busters II</td>
+<td>1989</td>
+<td>Now</td>
+<td><a href="NowComics/NowComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Ghosted</td>
 <td>2013</td>
 <td>Image</td>
@@ -17323,6 +17351,13 @@
 <td>1967</td>
 <td>Gold Key</td>
 <td><a href="GoldKey/GoldKey.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Green Hornet</td>
+<td>1989</td>
+<td>Now</td>
+<td><a href="NowComics/NowComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -22275,6 +22310,13 @@
 </tr>
 
 <tr>
+<td>Lynx</td>
+<td>2015</td>
+<td>Awakened</td>
+<td><a href="Lynx/Lynx.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Lion King</td>
 <td>1994</td>
 <td>Disney</td>
@@ -23539,6 +23581,13 @@
 <td>1997</td>
 <td>Caliber</td>
 <td><a href="CaliberComics/CaliberComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Married... With Children</td>
+<td>1990</td>
+<td>Now</td>
+<td><a href="NowComics/NowComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -24934,6 +24983,13 @@
 </tr>
 
 <tr>
+<td>Mirror Walker</td>
+<td>1990</td>
+<td>Now</td>
+<td><a href="NowComics/NowComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Misadventures Of Salem Hyde</td>
 <td>2013</td>
 <td>Abrams</td>
@@ -25120,6 +25176,13 @@
 <td>1984</td>
 <td>R.U. Sirius</td>
 <td><a href="Mondo2000/Mondo2000.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Monkey King</td>
+<td>2005</td>
+<td>Dark Horse</td>
+<td><a href="DarkHorse/DarkHorse.html">Details</a></td>
 </tr>
 
 <tr>
@@ -25449,6 +25512,13 @@
 <td>1986</td>
 <td>Eclipse</td>
 <td><a href="Eclipse/Eclipse.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Mr. T &amp; The T-Force</td>
+<td>1993</td>
+<td>Now</td>
+<td><a href="NowComics/NowComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -27350,6 +27420,13 @@
 </tr>
 
 <tr>
+<td>Original Astro Boy</td>
+<td>1987</td>
+<td>Now</td>
+<td><a href="NowComics/NowComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Original E-Man &amp; Michael Mauser</td>
 <td>1985</td>
 <td>First Comics</td>
@@ -29167,6 +29244,13 @@
 </tr>
 
 <tr>
+<td>Racer X</td>
+<td>1988</td>
+<td>Now</td>
+<td><a href="NowComics/NowComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Radiator Comics</td>
 <td>2014</td>
 <td>Publisher</td>
@@ -29220,6 +29304,13 @@
 <td>2002</td>
 <td>Fantagraphics</td>
 <td><a href="Fantagraphics/Fantagraphics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Ralph Snart Adventures</td>
+<td>1986</td>
+<td>Now</td>
+<td><a href="NowComics/NowComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -29335,6 +29426,13 @@
 </tr>
 
 <tr>
+<td>Ray Zone</td>
+<td>1947</td>
+<td>Creator</td>
+<td><a href="RayZone/RayZone.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Razorwire</td>
 <td>1996</td>
 <td>5th Panel</td>
@@ -29346,6 +29444,13 @@
 <td>1997</td>
 <td>Dark Horse</td>
 <td><a href="DarkHorse/DarkHorse.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Real Ghostbusters</td>
+<td>1988</td>
+<td>Now</td>
+<td><a href="NowComics/NowComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -30362,6 +30467,13 @@
 </tr>
 
 <tr>
+<td>Roth Vanguard And The Venomous Vipers</td>
+<td>2018</td>
+<td>Lody Art Comics</td>
+<td><a href="RothVanguard/RothVanguard.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Rotogin</td>
 <td>2003</td>
 <td>Image</td>
@@ -30478,6 +30590,13 @@
 <td>1944</td>
 <td>Publisher</td>
 <td><a href="RuralHome/RuralHome.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Rust</td>
+<td>1987</td>
+<td>Now</td>
+<td><a href="NowComics/NowComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -32186,6 +32305,13 @@
 </tr>
 
 <tr>
+<td>Slimer!</td>
+<td>1989</td>
+<td>Now</td>
+<td><a href="NowComics/NowComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Slingers</td>
 <td>1998</td>
 <td>Marvel</td>
@@ -32631,6 +32757,13 @@
 <td>1939</td>
 <td>Brookwood</td>
 <td><a href="SpeedComics/SpeedComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Speed Racer</td>
+<td>1985</td>
+<td>Now</td>
+<td><a href="NowComics/NowComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -33991,6 +34124,13 @@
 </tr>
 
 <tr>
+<td>Syphons</td>
+<td>1986</td>
+<td>Now</td>
+<td><a href="NowComics/NowComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td><a name="t">Taarna</a></td>
 <td>2018</td>
 <td>HeavyMetal</td>
@@ -34366,6 +34506,20 @@
 <td>1984</td>
 <td>Orion</td>
 <td><a href="Terminator/Terminator.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Terminator</td>
+<td>1988</td>
+<td>Now</td>
+<td><a href="NowComics/NowComics.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Terminator: The Burning Earth</td>
+<td>1990</td>
+<td>Now</td>
+<td><a href="NowComics/NowComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -35349,6 +35503,13 @@
 </tr>
 
 <tr>
+<td>Twilight Zone</td>
+<td>1990</td>
+<td>Now</td>
+<td><a href="NowComics/NowComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Twinkle Comics</td>
 <td>1945</td>
 <td>Spotlight</td>
@@ -35734,6 +35895,13 @@
 </tr>
 
 <tr>
+<td>Universal Soldier</td>
+<td>1992</td>
+<td>Now</td>
+<td><a href="NowComics/NowComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Universe X</td>
 <td>2000</td>
 <td>Marvel</td>
@@ -35821,7 +35989,7 @@
 <td>Untouchables</td>
 <td>1997</td>
 <td>Caliber</td>
-<td><a href="Caliber/Caliber.html">Details</a></td>
+<td><a href="CaliberComics/CaliberComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -35937,6 +36105,13 @@
 </tr>
 
 <tr>
+<td>Valor Thunderstar And His Fireflies</td>
+<td>1986</td>
+<td>Now</td>
+<td><a href="NowComics/NowComics.html">Details</a></td>
+</tr>
+
+<tr>
 <td>Vampire State Building</td>
 <td>2019</td>
 <td>Ablaze</td>
@@ -36025,6 +36200,13 @@
 <td>1950</td>
 <td>EC</td>
 <td><a href="VaultOfHorror/VaultOfHorror.html">Details</a></td>
+</tr>
+
+<tr>
+<td>Vector</td>
+<td>1986</td>
+<td>Now</td>
+<td><a href="NowComics/NowComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -36577,7 +36759,7 @@
 <td>War Of The Worlds</td>
 <td>1996</td>
 <td>Caliber</td>
-<td><a href="Caliber/Caliber.html">Details</a></td>
+<td><a href="CaliberComics/CaliberComics.html">Details</a></td>
 </tr>
 
 <tr>
@@ -37697,7 +37879,7 @@
 <td>World Of H.P. Lovecraft</td>
 <td>1993</td>
 <td>Caliber</td>
-<td><a href="Caliber/Caliber.html">Details</a></td>
+<td><a href="CaliberComics/CaliberComics.html">Details</a></td>
 </tr>
 
 <tr>
