--- a/IDW/IDW.html
+++ b/IDW/IDW.html
@@ -469,7 +469,7 @@ In 2016, IDW launched the Hasbro Reconstruction initiative to present a shared u
 <li><a href="IDW73.jpg">Classic Monsters of Pre-Code Horror Comics: Mummies</a> (2017)
 <li><a href="IDW74.jpg">Classic Monsters of Pre-Code Horror Comics: Swamp Monsters</a> (2019)
 <li><a href="IDW75.jpg">Classic Popeye</a> (2012)
-<li><a href="IDW76.jpg">Classified Secrests Of Infestation</a> (2010)
+<li><a href="IDW76.jpg">Classified Secrets Of Infestation</a> (2010)
 <li><a href="IDW77.jpg">Claws Come Out</a> (2007) 
 <li><a href="IDW78.jpg">Clive Barker's The Great and Secret Show</a> (2006) 
 <li><a href="IDW79.jpg">Clive Barker's The Thief of Always</a> (2005) 
@@ -560,12 +560,12 @@ In 2016, IDW launched the Hasbro Reconstruction initiative to present a shared u
 <li><a href="IDW163.jpg">Ghost Whisperer</a> (2019)
 <li><a href="IDW164.jpg">Ghostbusters</a> (2019)
 <li><a href="IDW165.jpg">Ghostbusters 101</a> (2019)
-<li><a href="IDW166.jpg">Ghostbuster 20/20</a> (2019)
+<li><a href="IDW166.jpg">Ghostbusters 20/20</a> (2019)
 <li><a href="IDW167.jpg">Ghostbusters Funko Universe</a> (2019)
 <li><a href="IDW168.jpg">Ghoul</a> (2019)
 <li><a href="IDW170.jpg">Godzilla: Gangsters and Goliaths</a> (2011)
 <li><a href="IDW169.jpg">Godzilla: Kingdom of Monsters</a> (2011) 
-<li><a href="IDW171.jpg">Graham Ingles' EC Stories Artists Edtion</a> (2016)
+<li><a href="IDW171.jpg">Graham Ingles' EC Stories Artists Edition</a> (2016)
 <li><a href="IDW172.jpg">Grimjack: Killer Instinct</a> (2005) 
 <li><a href="IDW173.jpg">Grimjack: The Manx Cat</a> (2009) 
 <li><a href="IDW174.jpg">Groom Lake</a> (2009) 
